--- a/.github/workflows/testpoc.yml
+++ b/.github/workflows/testpoc.yml
@@ -20,11 +20,14 @@ jobs:
             tar xJf sfdx-linux-x64.tar.xz -C ~/sfdx --strip-components 1
             echo "$HOME/sfdx/bin" >> $GITHUB_PATH
             ~/sfdx/bin/sfdx version
+            
   
   # Authenticate dev hub
          - name: 'Authenticate Dev Hub'
            run: 
-            sfdx force:auth:jwt:grant --clientid ${{ secrets.CONSUMER_KEY }} --jwtkeyfile ./server.key --username ${{ secrets.CI_NAME }} --instanceurl ${{ secrets.CI_URL }}
+            sfdx force:org:display -u anig2989@gmail.com --verbose --json > authFile.json
+            sfdx auth:sfdxurl:store -f authFile.json
+            #sfdx force:auth:jwt:grant --clientid ${{ secrets.CONSUMER_KEY }} --jwtkeyfile ./server.key --username ${{ secrets.CI_NAME }} --instanceurl ${{ secrets.CI_URL }}
 
   # Validating and deploying the deployment
          - name: 'Validation and deployment'
