--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -89,7 +89,7 @@ jobs:
                   echo PREVIOUS_SUCCESSFUL_COMMIT_ID is $PREVIOUS_SUCCESSFUL_COMMIT_ID
                   echo 'y' | sfdx plugins:install sfpowerkit
                   #sfdx sfpowerkit:project:diff -r $PREVIOUS_SUCCESSFUL_COMMIT_ID -t $CURRENT_COMMIT_ID -d Delta_pkg
-                  #sfdx plugins:install sfdx-git-delta
+                  echo 'y' | sfdx plugins:install sfdx-git-delta
                   mkdir changed-sources
                   sfdx sgd:source:delta --to CI --from preci --output changed-sources/ --generate-delta
 
