--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -91,7 +91,7 @@ jobs:
                   #sfdx sfpowerkit:project:diff -r $PREVIOUS_SUCCESSFUL_COMMIT_ID -t $CURRENT_COMMIT_ID -d Delta_pkg
                   echo 'y' | sfdx plugins:install sfdx-git-delta
                   mkdir changed-sources
-                  sfdx sgd:source:delta --to CI --from preci --output changed-sources/ --generate-delta
+                  sfdx sgd:source:delta --to "origin/CI" --from "origin/preci" --output changed-sources/ --generate-delta
 
                   
               env:
