--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -90,8 +90,8 @@ jobs:
                   echo 'y' | sfdx plugins:install sfpowerkit
                   #sfdx sfpowerkit:project:diff -r $PREVIOUS_SUCCESSFUL_COMMIT_ID -t $CURRENT_COMMIT_ID -d Delta_pkg
                   echo 'y' | sfdx plugins:install sfdx-git-delta
-                  mkdir changed-sources
-                  sfdx sgd:source:delta --to "origin/CI" --from "origin/preci" --output changed-sources/ --generate-delta
+                  mkdir Delta_pkg
+                  sfdx sgd:source:delta --to "origin/CI" --from "origin/preci" --output Delta_pkg/ --generate-delta
 
                   
               env:
