--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -91,7 +91,7 @@ jobs:
                   #sfdx sfpowerkit:project:diff -r $PREVIOUS_SUCCESSFUL_COMMIT_ID -t $CURRENT_COMMIT_ID -d Delta_pkg
                   echo 'y' | sfdx plugins:install sfdx-git-delta
                   mkdir Delta_pkg
-                  sfdx sgd:source:delta --to "origin/CI" --from "origin/preci" --output Delta_pkg/ --generate-delta
+                  sfdx sgd:source:delta --to "HEAD" --from "origin/preci" --output Delta_pkg/ --generate-delta
 
                   
               env:
