--- a/.github/workflows/pushtofeature.yml
+++ b/.github/workflows/pushtofeature.yml
@@ -10,7 +10,7 @@ jobs:
     pmd-run:
         runs-on: ubuntu-latest
         steps:
-            # Checkout the source code
+            # Checkout the source
             - name: 'Checkout source code'
               uses: actions/checkout@v2
 
