--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -82,9 +82,8 @@ jobs:
                   echo git checkout -b Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} $DESTINATION_BRANCH_NAME
                   git checkout -b Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} $DESTINATION_BRANCH_NAME
                   git checkout Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                  git remote set-url origin ${SOURCE_REPO_URL}
-                  git config --global user.email "$EMAIL_OF_USER_FOR_DESTINATION_REPO"
-                  git config --global user.name "$NAME_OF_USER"
+                  git config --global user.email "anig2989@gmail.com"
+                  git config --global user.name "anig2989"
                   git add .
                   git commit -m "creating promotional branch"
                   git push origin Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
