--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -82,10 +82,10 @@ jobs:
                   echo git checkout -b Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} $DESTINATION_BRANCH_NAME
                   git checkout -b Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} $DESTINATION_BRANCH_NAME
                   git checkout Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                  echo git config --global user.email "anig2989@gmail.com"
-                  git config --global user.email "anig2989@gmail.com"
-                  echo git config --global user.name "anig2989"
-                  git config --global user.name "anig2989"
+                  echo git config --global user.email "${{ secrets.EMAIL_OF_USER_FOR_DESTINATION_REPO }}"
+                  git config --global user.email "${{ secrets.EMAIL_OF_USER_FOR_DESTINATION_REPO }}"
+                  echo git config --global user.name "${{ secrets.NAME_OF_USER }}"
+                  git config --global user.name "${{ secrets.NAME_OF_USER }}"
                   git add .
                   git commit -m "creating promotional branch"
                   git push origin Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
