--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -82,8 +82,9 @@ jobs:
                   git checkout -b Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} $DESTINATION_BRANCH_NAME
                   git checkout Promotional-$DESTINATION_BRANCH_NAME-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
                   #git remote set-url origin ${SOURCE_REPO_URL}
-                  #git config --global user.email "${{ secrets.EMAIL_OF_USER_FOR_DESTINATION_REPO }}"
-                  #git config --global user.name "${{ secrets.NAME_OF_USER }}"
+                  git config --global user.email "${{ secrets.EMAIL_OF_USER_FOR_DESTINATION_REPO }}"
+                  git config --global user.name "${{ secrets.NAME_OF_USER }}"
+                  git config --list
                   #git fetch
                   git add .
                   git commit -m "creating promotional branch"
