--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -50,8 +50,8 @@ jobs:
               run: |
                   source ./config.sh
                   echo "Creating promotional Branch..."
-                  chmod +x Create_promotional.sh
-                  sh Create_promotional.sh
+                  chmod +x scripts/Create_promotional.sh
+                  sh scripts/Create_promotional.sh
                   
                    
               env:
