--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -80,7 +80,7 @@ jobs:
                   git checkout Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
                   
                   git ls-remote https://github.com/anig2989/Devopstrial.git | \
-                  grep refs/heads/${CURRENT_BRANCH_NAME} | cut -f 1 > CURRENT_COMMIT_ID.txt
+                  grep refs/heads/${DESTINATION_BRANCH_NAME} | cut -f 1 > CURRENT_COMMIT_ID.txt
                   CURRENT_COMMIT_ID=$(<CURRENT_COMMIT_ID.txt)
                   echo CURRENT_COMMIT_ID is $CURRENT_COMMIT_ID
                   git ls-remote https://github.com/anig2989/Devopstrial.git | \
